[gd_scene load_steps=8 format=3 uid="uid://dplh27whcr5vj"]

[ext_resource type="Script" path="res://scenes/levels/level_1.gd" id="1_e4c5c"]
[ext_resource type="Texture2D" uid="uid://bm38fluu3nxc7" path="res://Assets/Backgrounds/3x3.png" id="1_wci2l"]
[ext_resource type="Texture2D" uid="uid://cvoklfx2mm0gt" path="res://Assets/Backgrounds/Background.png" id="2_f4f7d"]
[ext_resource type="FontFile" uid="uid://et80egulo4w5" path="res://Assets/waifssk.ttf" id="4_trb3o"]
[ext_resource type="Texture2D" uid="uid://by81lnlc142v0" path="res://Assets/Button_back.png" id="5_kuh4d"]
[ext_resource type="Texture2D" uid="uid://deab14doaw1fl" path="res://Assets/Button_restart.png" id="6_vwjo0"]
[ext_resource type="Texture2D" uid="uid://df8ob1ru1mbha" path="res://Assets/Button_next.png" id="7_ksb3c"]

[node name="Level1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e4c5c")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_f4f7d")

[node name="TextureRect" type="TextureRect" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wci2l")

[node name="GridContainer" type="GridContainer" parent="TextureRect2/TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 7

[node name="Label" type="Label" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 235.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.294118, 0.2, 0.156863, 1)
theme_override_fonts/font = ExtResource("4_trb3o")
theme_override_font_sizes/font_size = 60
text = "
LEVEL 1"
horizontal_alignment = 1

[node name="Control" type="Control" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -774.5
offset_top = -308.0
offset_right = 774.5
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -253.0
offset_right = 402.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 60

[node name="Back" type="Button" parent="TextureRect2/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_kuh4d")
flat = true

[node name="Restart" type="Button" parent="TextureRect2/HBoxContainer"]
layout_mode = 2
icon = ExtResource("6_vwjo0")
flat = true

[node name="Next" type="Button" parent="TextureRect2/HBoxContainer"]
visible = false
layout_mode = 2
icon = ExtResource("7_ksb3c")
flat = true

[connection signal="pressed" from="TextureRect2/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="TextureRect2/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
